--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,10 +5,10 @@
   <%= f.text_field :name %><br>
 
   <label>Artist ID:</label><br>
-  <%= f.text_field :artist_id  %><br>
+  <%= f.text_field :song[:artist_id] %><br>
 
   <label>Genre ID:</label><br>
-  <%= f.text_field :genre_id  %><br>
+  <%= f.text_field :song[:genre_id] %><br>
 
   <%= f.submit%>
 <% end %>
