--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,13 +2,13 @@
 
 <%= form_for(@song) do |f| %>
   <label>Name:</label><br>
-  <%= f.text_field :name %><br>
+  <%= f.text_field :song[name] %><br>
 
   <label>Artist ID:</label><br>
-  <%= f.text_field :song[:artist_id] %><br>
+  <%= f.text_field :song[artist_id] %><br>
 
   <label>Genre ID:</label><br>
-  <%= f.text_field :song[:genre_id] %><br>
+  <%= f.text_field :song[genre_id] %><br>
 
   <%= f.submit%>
 <% end %>
